# MCP

./: .gitignore  .mcp.json  README.md
resolve-tool/: CLAUDE.md  FUSION_COMP_GUIDE.md  MCP_TOOLS.md  README.md  RESOLVE_GUIDE.md  davinci-resolve-api.txt  install.sh  pyproject.toml
resolve-tool/examples/: basic_connection.py  create_project.py  import_and_build_timeline.py
resolve-tool/src/resolve_lib/: __init__.py  color_group.py  connect.py  deliver.py  exceptions.py  folder.py  gallery.py  graph.py  media_pool.py  media_pool_item.py  media_storage.py  project.py  project_manager.py  session.py  timeline.py  timeline_item.py  types.py  validators.py
resolve-tool/src/resolve_mcp/: __init__.py  __main__.py  helpers.py  server.py  state.py
resolve-tool/src/resolve_mcp/tools/: __init__.py  audio_tools.py  color_grade_tools.py  color_group_tools.py  color_node_tools.py  color_tools.py  color_version_tools.py  deliver_tools.py  fusion_scripting_tools.py  gallery_tools.py  media_pool_tools.py  media_storage_tools.py  project_tools.py  python_exec_tools.py  session_tools.py  timeline_item_tools.py  timeline_tools.py  (+1 more)
resolve-tool/tests/: conftest.py  test_connect.py  test_media_pool.py  test_project.py  test_project_manager.py  test_session.py  test_timeline.py
resolve-tool/tests/mocks/: mock_resolve.py
resolve-tool/tests/test_mcp_tools/: test_color_grade_tools.py  test_color_group_tools.py  test_color_node_tools.py  test_color_version_tools.py  test_gallery_tools.py  test_media_pool_tools.py  test_session_tools.py  test_timeline_tools.py  test_transition_tools.py
(+5 files in other folders)
