[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolve-tool"
version = "0.1.0"
description = "High-level Python wrapper for DaVinci Resolve Scripting API + MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resolve_lib", "src/resolve_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
